# VideoEditor

./: .gitignore  FfmpegWraper.py  FileManager.py  GUI.py  LICENSE  Makefile  MultiTake.py  README.md  Synchronizer.py  VideoEditor.py  constants.py  pyproject.toml  requirements.txt
videoeditor/: FfmpegWraper.py  FileManager.py  GUI.py  MultiTake.py  Synchronizer.py  VideoEditor.py  constants.py
