[tool.isort]
profile = "black"

[tool.black]
line-length = 95
target-version = ['py311']
include = '\.pyi?$'

[tool.poetry]
name = "videoeditor"
version = "0.1.0"
description = ""
authors = ["MaciAC <macia.ac@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"
llvmlite = "^0.40.1"
librosa = "^0.10.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
